--- a/Style.css
+++ b/Style.css
@@ -388,6 +388,7 @@ form textarea {
   .contact-container {
         flex-direction: column; /* Stack photo and form vertically */
         text-align: center; /* Center-align content for smaller screens */
+      padding: 10px;
     }
 
     .contact-photo {
@@ -395,6 +396,7 @@ form textarea {
     }
 
     form {
+        max-width: 100%;
         width: 100%; /* Full width on smaller screens */
     }
 }
