--- a/Style.css
+++ b/Style.css
@@ -395,7 +395,7 @@ form textarea {
     }
 
     form {
-        max-width: 100%;
+        max-width: none;
         width: 100%; /* Full width on smaller screens */
     }
 }
